@@ -333,14 +333,19 @@ class Citation(object):
 class BaseVideo(object):
 
     def __init__(self, model_block):
-        if getattr(model_block, 'video', None) is None:
+        video = None
+        try:
+            video = getattr(model_block, 'video')
+        except:
+            pass
+        if video is None:
             return
-        self.renditions = model_block.video.renditions
-        self.video_still = model_block.video.video_still
-        self.title = model_block.video.title
-        self.description = model_block.video.subtitle
-        self.title = model_block.video.title
-        self.id = model_block.video.uniqueId.split('/')[-1]  # XXX ugly
+        self.renditions = video.renditions
+        self.video_still = video.video_still
+        self.title = video.title
+        self.description = video.subtitle
+        self.title = video.title
+        self.id = video.uniqueId.split('/')[-1]  # XXX ugly
         self.format = model_block.layout
 
     @property
