@@ -6,6 +6,8 @@ Change log for zeit.web
 
 - FIX: Don't break feed generation on imagegroups whose meta files are missing
 
+- FIX: Ignore old-style video.zeit.de uniqueIds since we cannot resolve them
+
 
 2.3 (2015-09-17)
 ----------------
